fixed button jump and vibrate

--- a/client/src/app/navbar/navbar.component.css
+++ b/client/src/app/navbar/navbar.component.css
@@ -6,12 +6,13 @@
 }
 
 .btn-primary:hover {
-    border: 1px solid;
+    /* border: 1px solid;
     background-color: #00FFFF;
     box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
     outline-color: rgba(255, 255, 255, 0);
-    outline-offset: 15px;
-    text-shadow: 1px 1px 2px #427388;
+    text-shadow: 1px 1px 2px #427388; */
+     background-color: #00FFFF;
+     color: #000;
 }
 
 .btn-success {
@@ -22,12 +23,14 @@
 }
 
 .btn-success:hover {
-    border: 1px solid;
-    background-color: #15E95C;
+    /* border: 1px solid;
+    
     box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
     outline-color: rgba(255, 255, 255, 0);
     outline-offset: 15px;
-    text-shadow: 1px 1px 2px #427388;
+    text-shadow: 1px 1px 2px #427388; */
+    background-color: #15E95C;
+    color: #000;
 }
 
 ul {
